# Wakfuassistant

./: .env.example  .gitignore  Autoclick.ps1  BOOT.md  CHANGELOG.md  ClawOpenCodePanel.spec  Docavancementprojet.md  README.md  WakfuAssistant.spec  fix_async.py  fix_async_export.py  fix_cdn.py  fix_char_hover.py  fix_container.py  fix_exports.py  fix_hover_scope.py  fix_import.py  fix_import2.py  fix_indent.py  fix_main2.py  fix_main_import.py  fix_multi_hover.py  fix_patrimoine_hover.py  fix_urls.py  fix_window_export.py  health_check.py  index.html  main.py  package-lock.json  package.json  patch_hdv.py  run_browser.py  start_browser.bat  start_debug.bat  start_overlay.bat  start_tooltip_studio.bat  test copy.html  test.html  vite.config.ts  vite.web.config.js  (+1 more)
.claude/: settings.json  settings.local.json
_archive_v1_20260329/: _cleanup.py  weights_api.py
agent/: FIX_V2_RESTORE_AND_PATCH.ps1  README.md  advice_structure.txt  analyse_azy_class.txt  analyse_azy_hierarchy.txt  analyse_champs.txt  analyse_crV.txt  analyse_csa.txt  analyse_csa_full.txt  analyse_hdv_prix.txt  analyse_messages.txt  analyse_prix_v2.txt  build.bat  build_errors.txt  dashboard.py  diag_complet.txt  diag_crV_debug.txt  diag_decoded.txt  diag_eM.txt  diag_fgA.txt  diag_hdv.txt  diag_hdv2.txt  diag_hdv3.txt  diag_hdv_all.txt  diag_hdv_csa.txt  diag_hdv_focus.txt  diag_hdv_item.txt  diag_pivot.txt  diagnostic_backups.txt  discovery_fga.txt  launch_wakfu_with_agent.bat  live_decoder.py  mvnw.cmd  pom.xml  start_watcher.bat  wakfu_watcher.py
build-generator/: README.md  equipment.html  reference.html  spells-editor.html
core/: calibration_history.py  database.py  game_database.py  item_icons.py  kamas_history.py  permanent_journal.py  wakfu_tracker.py
data/: Recettes.csv  calibration_entries.json  config.json  game_database.json  kamas_journal.jsonl  ui_layout.json  wakfu_tracker.db  wakfu_tracker.db-shm  wakfu_tracker.db-wal
docs/: 00-ARCHITECTURE.md  01-SOURCES_ET_FORMATS.md  02-JOURNAUX_ECOUTE.md  03-POC_LOGS_PIPELINE.md  04-COMMANDES_SYNC.md  05-POC_INVENTAIRE.md  06-POC_HDV.md  07-CONCEPT_ECOSYSTEME.md  08-PROTOCOL_RESEAU.md  09-PROTOCOL_ITEMS.md  10-TODO_PROCHAINE_SESSION.md  11-HDV_ENCHANTEMENTS.md  12-CONTRADICTIONS.md  13-INTERFACE_UI.md  14-HDV_PROTOCOL_REFERENCE.md  15-CRAFT_ECONOMY_REFERENCE.md  17-UNIFICATION_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_HANDOFF.md  CHARACTER_INVENTORY_CHEST_REBUILD_GUIDE.md  HANDOVER.md  INDEX.md  integrity_hashes.json  permanent-journal-worklog-2026-03-17.md  personnage-worklog-2026-03-18.md  transactions-worklog-2026-03-16.md  wakfu-quick-preview-test.md  wakfu-quick-preview.md
frontend/: app.js  index.html  style.css
logs/: cdn_items_full.json  cdn_recipe_ingredients.json  cdn_recipes.json  debug_char.txt  i18n_items_fr.json  item_meta_cache.json  item_meta_cache_v2.json  item_name_cache.json  jar_class_hits.txt  market_latest_named_preview.csv  market_latest_preview.md  (+7 more)
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cdn_commands.rs  hdv_commands.rs  log_commands.rs  mod.rs  overlay_commands.rs  patrimoine_commands.rs  pipeline.rs  session.rs
src-tauri/src/migrations/: 001_initial.sql  002_cdn_cache.sql  003_recipes_cache.sql
src-tauri/src/models/: game_event.rs
src-tauri/src/services/: cdn_cache.rs  database.rs  log_parser.rs  log_watcher.rs  mod.rs  state_machine.rs  win32_overlay.rs
src-tauri/src/utils/: constants.rs  logger.rs  mod.rs  paths.rs
(+19595 files in other folders)
