[package]
name = "wakfu-overlay"
version = "2.0.0"
description = "Wakfu Overlay — overlay gaming temps réel pour le MMORPG Wakfu"
authors = ["Smedj"]
license = "MIT"
repository = "https://github.com/Duperopope/Wakfuassistant"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wakfu_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async
tokio = { version = "1", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex (parsing logs)
regex = "1"
once_cell = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# HTTP client (CDN, community sync)
reqwest = { version = "0.12", features = ["json"] }

# UUID (session IDs)
uuid = { version = "1", features = ["v4"] }

# Directories (AppData paths)
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
